--- a/app/assets/stylesheets/forms/photo_upload_forms.css
+++ b/app/assets/stylesheets/forms/photo_upload_forms.css
@@ -18,6 +18,7 @@
   place-items: center;
   position: relative;
   padding: 1rem 0 2rem 0;
+  z-index: 200;
 }
 
 .hidden {
@@ -35,10 +36,13 @@
 
 .img-overlay-hidden {
   display: none;
+  opacity: 0%;
 }
 
 .img-overlay-show {
   display: block;
+  opacity: 100%;
+  transform: opacity 200ms ease-in-out;
 }
 
 .img-overlay-show i {
@@ -72,19 +76,20 @@
 }
 
 .image-preview {
-  display: flex;
-  flex-flow: column wrap;
-  float: left;
   position: relative;
+  float: left;
   top: 0px;
   left: 0px;
-  max-width: 490px;
-  height: auto;
+  max-width: 500px;
 }
 
 .image-preview img {
   border: 2px solid #0870d1;
+  max-height:500px;
+  max-width:500px;
+  height:auto;
   width: calc(100% - 4px);
+
 }
 
 .photo-label-upload {
