--- a/app/assets/stylesheets/forms/profile_forms.css
+++ b/app/assets/stylesheets/forms/profile_forms.css
@@ -95,7 +95,7 @@
   color: #316ECA
 }
 
-#about {
+textarea {
   width: 100%;
   height: 150px;
   padding: 12px 11px;
